# nubuck

./: .gitignore  Makefile  atom.xml  clean_pdb  index.html  nb_gensources.sh  robots.txt  sitemap.xml
src/Nubuck/: CMakeLists.txt  Makefile  Nubuck_Readme.txt  events.cpp  face_vertex_mesh.cpp  math_conv.cpp  maxint.h  nubuck.cpp  nubuck_main.cpp  nubuck_private.h  nubuck_standalone.cpp  page_alloc_test.cpp  polymesh.cpp  sources.cmake
src/Nubuck/UI/: block_signals.h  menuitem.cpp  nb_widgets.cpp  nb_widgets.h  plaintextdevice.cpp  plaintextdevice.h  sources.cmake  userinterface.cpp  userinterface.h  window_events.h
src/Nubuck/UI/algorithmwidget/: algorithmwidget.cpp  algorithmwidget.h  sources.cmake
src/Nubuck/UI/colorbutton/: colorbutton.cpp  colorbutton.h  sources.cmake
src/Nubuck/UI/console/: console.cpp  console.h  sources.cmake
src/Nubuck/UI/designer_plugins/: CMakeLists.txt  nbw_spinbox_plugin.cpp  nbw_spinbox_plugin.h
src/Nubuck/UI/dirlight/: dirlight.cpp  dirlight.h  sources.cmake
src/Nubuck/UI/faceconfig/: faceconfig.cpp  faceconfig.h
src/Nubuck/UI/forms/: algorithm.ui  console.ui  faceconfig.ui  logwidget.ui  mainwindow.ui  nodeconfig.ui  op_delaunay3d.ui  op_loadobj.ui  operatorpanelheader.ui  randompoints.ui  renderconfig.ui  rendermetrics.ui  sources.cmake
src/Nubuck/UI/glwidget/: glwidget.cpp  glwidget.h  sources.cmake
src/Nubuck/UI/logwidget/: logwidget.cpp  logwidget.h  logwidget_inl.h  sources.cmake
src/Nubuck/UI/mainwindow/: mainwindow.cpp  mainwindow.h  sources.cmake
src/Nubuck/UI/nbw_spinbox/: nbw_spinbox.cpp  nbw_spinbox.h  nbw_spinbox_controls.h  sources.cmake
src/Nubuck/UI/nodeconfig/: nodeconfig.cpp  nodeconfig.h
src/Nubuck/UI/operatorpanel/: operatorpanel.cpp  operatorpanel.h  sources.cmake
src/Nubuck/UI/outliner/: outliner.cpp  outliner.h  outliner_fwd.h  sources.cmake
src/Nubuck/UI/penoptions/: pen_options.cpp  pen_options.h  sources.cmake
src/Nubuck/UI/randompoints/: randompoints.cpp  randompoints.h  sources.cmake
src/Nubuck/UI/renderconfig/: renderconfig.cpp  renderconfig.h  sources.cmake
src/Nubuck/UI/rendermetrics/: rendermetrics.cpp  rendermetrics.h  sources.cmake
src/Nubuck/UI/renderstats/: renderstats.cpp  renderstats.h  sources.cmake
src/Nubuck/UI/renderview/: renderview.cpp  renderview.h  sources.cmake
src/Nubuck/UI/simple_panel/: simple_panel.cpp  simple_panel.h  sources.cmake
src/Nubuck/algdriver/: algdriver.cpp  algdriver.h  sources.cmake
src/Nubuck/animation/: animation.cpp  animator.cpp  move_vertex_anim.cpp  sources.cmake
src/Nubuck/camera/: arcball_camera.cpp  arcball_camera.h  sources.cmake
src/Nubuck/common/: commands.cpp  commands.h  common.cpp  common.h  filehandle.h  sources.cmake  string_hash.cpp  string_helper.cpp  string_helper.h  types.h
src/Nubuck/common/config/: config.cpp  config.h  sources.cmake
src/Nubuck/common/filesystem/: filesystem.cpp  filesystem.h  sources.cmake
src/Nubuck/editors/: editor.cpp  entity_editor.cpp  sources.cmake  vertex_editor.cpp
src/Nubuck/events/: core_events.h  event_defs.cpp  event_defs.h  events.cpp  events.h
src/Nubuck/generic/: pointer.h  res_pointer.h  singleton.h
src/Nubuck/mainloop/: mainloop.cpp  mainloop.h  sources.cmake
src/Nubuck/makeutils/: mocname  objname  uiheadername  windir
src/Nubuck/math/: box.cpp  box.h  intersections.h  is_ray_box.cpp  is_ray_plane.cpp  is_ray_sphere.cpp  line.cpp  line.h  line2.cpp  line3.cpp  line_mem_inl.h  math.cpp  math.h  math_inl.h  matrix3.h  matrix3_mem.cpp  matrix3_op.cpp  matrix4.h  matrix4_mem.cpp  matrix4_op.cpp  plane.h  quaternion.h  quaternion_mem_inl.h  quaternion_op_inl.h  ray.h  sources.cmake  sphere.h  transform.h  vector2.h  vector2_mem.cpp  vector2_mem_inl.h  vector2_op.cpp  vector2_op_inl.h  vector3.h  vector3_mem.cpp  vector3_op.cpp  vector3_op_inl.h  view_frustrum.cpp  view_frustrum.h
src/Nubuck/microprofiler/: micro-profiler.lib  micro-profiler_x64.lib  sources.cmake
src/Nubuck/operators/: operator.cpp  operator.h  operator_driver.cpp  operator_driver.h  operator_events.h  operator_modules.cpp  operators.cpp  operators.h  sources.cmake  standard_algorithm.cpp
src/Nubuck/operators/op_alg_vdh/: op_alg_vdh.cpp  op_alg_vdh.h  sources.cmake
src/Nubuck/operators/op_chull/: op_chull.cpp  op_chull.h  sources.cmake
src/Nubuck/operators/op_delaunay3d/: d3_delaunay.cpp  d3_delaunay.h  op_delaunay3d.cpp  op_delaunay3d.h  sources.cmake
src/Nubuck/operators/op_delete/: op_delete.cpp  op_delete.h  sources.cmake
src/Nubuck/operators/op_fchull/: op_fchull.cpp  op_fchull.h  sources.cmake
src/Nubuck/operators/op_gen_incube/: op_gen_incube.cpp  op_gen_incube.h
src/Nubuck/operators/op_gen_merge/: op_gen_merge.cpp  op_gen_merge.h  sources.cmake
src/Nubuck/operators/op_gen_parametric/: op_gen_parametric.cpp  op_gen_parametric.h  sources.cmake
src/Nubuck/operators/op_gen_platonic_solids/: op_gen_platonic_solids.cpp  op_gen_platonic_solids.h  sources.cmake
src/Nubuck/operators/op_gen_randompoints/: op_gen_randompoints.cpp  op_gen_randompoints.h  sources.cmake
src/Nubuck/operators/op_gen_windows/: op_gen_windows.cpp  op_gen_windows.h  sources.cmake
src/Nubuck/operators/op_join/: op_join.cpp  op_join.h  sources.cmake
src/Nubuck/operators/op_loadgeom/: op_loadgeom.cpp  op_loadgeom.h  sources.cmake
src/Nubuck/operators/op_loadobj/: op_loadobj.cpp  op_loadobj.h  sources.cmake
src/Nubuck/operators/op_loop/: op_loop.cpp  op_loop.h  sources.cmake
src/Nubuck/operators/op_merge_vertices/: op_merge_vertices.cpp  op_merge_vertices.h  sources.cmake
src/Nubuck/operators/op_savegeom/: op_savegeom.cpp  op_savegeom.h  sources.cmake
src/Nubuck/polymesh/: flipclip.cpp  flipclip.h  polymesh.cpp  sources.cmake
src/Nubuck/renderer/: debugoutput.cpp  glcall.h  renderer.cpp  renderer.h  renderer_local.h  renderer_notes.txt  sources.cmake
src/Nubuck/system/: sources.cmake  winerror.cpp  winerror.h
src/Nubuck/world/: _polyhedron.cpp  animation.cpp  entity.cpp  entity.h  events.h  polyhedron.h  renderworld.h  sources.cmake  world.cpp  world.h  world_events.h  world_inl.h
(+535 files in other folders)
